[KOGITO-8207] Changed type of SourceFile#contents to byte[]
Signed-off-by: Helber Belmiro <helber.belmiro@gmail.com>