@@ -28,14 +28,16 @@ import static org.assertj.core.api.Assertions.assertThat;
 
 class SourceFilesProviderImplTest {
 
+    private static final byte[] EMPTY_BYTE_ARRAY = new byte[0];
+
     private SourceFilesProviderImpl sourceFilesProvider;
 
-    private static String readFileContent(String file) throws URISyntaxException, IOException {
+    private static byte[] readFileContent(String file) throws URISyntaxException, IOException {
         Path path = Paths.get(Thread.currentThread().getContextClassLoader().getResource(file).toURI());
-        return Files.readString(path);
+        return Files.readAllBytes(path);
     }
 
-    private String getTestFileContentByFilename(String fileName) throws URISyntaxException, IOException {
+    private byte[] getTestFileContentByFilename(String fileName) throws URISyntaxException, IOException {
         return readFileContent("META-INF/resources/sources/" + fileName);
     }
 
@@ -100,7 +102,7 @@ class SourceFilesProviderImplTest {
     }
 
     private SourceFile emptySourceFile(String uri) {
-        return new SourceFile(uri, "");
+        return new SourceFile(uri, EMPTY_BYTE_ARRAY);
     }
 
     private SourceFile readSourceFile(String uri) throws URISyntaxException, IOException {
